Removed facebook and Google plus and added mail

--- a/index.html
+++ b/index.html
@@ -101,11 +101,8 @@
                 <li class="social-twitter">
                     <a href="#"><i class="fa fa-twitter"></i></a>
                 </li>
-                <li class="social-facebook">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                </li>
-                <li class="social-google-plus">
-                    <a href="#"><i class="fa fa-google-plus"></i></a>
+                <li class="social-mail">
+                    <a href="#"><i class="fa fa-paper-plane"></i></a>
                 </li>
             </ul>
         </div>
