Added links to email and twitter

--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
             <h2>We <i class="fa fa-heart"></i> new friends!</h2>
             <ul class="list-inline list-social">
                 <li class="social-twitter">
-                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="https://twitter.com/theowllab"><i class="fa fa-twitter"></i></a>
                 </li>
                 <li class="social-mail">
-                    <a href="#"><i class="fa fa-paper-plane"></i></a>
+                    <a href="mailto:theowllab@gmail.com"><i class="fa fa-paper-plane"></i></a>
                 </li>
             </ul>
         </div>
