Added the itunes link

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="header-content">
                         <div class="header-content-inner">
                             <h1>Slap these Stickers on your messages in order to show your passion for Basketball!</h1>
-                            <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
+                            <a class="badge-link" href="https://itunes.apple.com/us/app/hooper-talk/id1161300148?mt=8"><img src="img/app-store-badge.svg" alt=""></a>
                         </div>
                     </div>
                 </div>
